solved day07 using recursion! only took many wrong turns.

--- a/advent2020/day07.ipynb
+++ b/advent2020/day07.ipynb
@@ -2,17 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import utils\n",
-    "import math\n",
-    "import re\n",
-    "import itertools\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import NamedTuple\n",
-    "from collections import defaultdict, deque"
+    "from typing import NamedTuple, Dict"
    ]
   },
   {
@@ -28,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(('muted yellow', 2), ('FULL', 0))"
+       "(('muted yellow', 2), ('EMPTY', 0))"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
     "def parse_bag(txt):\n",
+    "    \"\"\"parses an individual bag\"\"\"\n",
     "    if txt == \"no other bags\":\n",
-    "        return \"FULL\", 0\n",
+    "        return \"EMPTY\", 0\n",
     "    num, col1, col2, _ = txt.split(\" \")\n",
     "    return f\"{col1} {col2}\", int(num)\n",
     "\n",
@@ -80,10 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'light red': {'bright white': 1, 'muted yellow': 2},\n",
@@ -93,17 +90,18 @@
        " 'shiny gold': {'dark olive': 1, 'vibrant plum': 2},\n",
        " 'dark olive': {'faded blue': 3, 'dotted black': 4},\n",
        " 'vibrant plum': {'faded blue': 5, 'dotted black': 6},\n",
-       " 'faded blue': {'FULL': 0},\n",
-       " 'dotted black': {'FULL': 0}}"
+       " 'faded blue': {'EMPTY': 0},\n",
+       " 'dotted black': {'EMPTY': 0}}"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
-    "def parse_7(inp=test7, verbose=False):\n",
+    "def parse_7(inp=test7) -> Dict[str, int]:\n",
+    "    \"\"\"returns a dict of colors: dict of color and how many bags it can contain.\n",
+    "    add check to see if a bag is repeated if needed\"\"\"\n",
     "\n",
     "    bags = {}\n",
     "\n",
@@ -116,10 +114,6 @@
     "            col, num = parse_bag(bag_rule)\n",
     "            rules_dict[col] = num\n",
     "\n",
-    "        if verbose:\n",
-    "            print(bag_rules)\n",
-    "            print(rules_dict)\n",
-    "            print(\"----\")\n",
     "        bags[color] = rules_dict\n",
     "        \n",
     "    return bags\n",
@@ -129,102 +123,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['dark olive', 'vibrant plum']\n",
-      "dark olive ['faded blue', 'dotted black']\n",
-      "vibrant plum ['faded blue', 'dotted black']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-4c721be63689>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m:=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mcolors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
    "source": [
-    "find = \"shiny gold\"\n",
-    "stack = list(rules[find].keys()) # first level bags\n",
-    "colors = stack[:]\n",
-    "print(colors)\n",
-    "\n",
-    "for col in stack:\n",
-    "    if cc := list(rules[col].keys()):\n",
-    "        print(col, cc)\n",
-    "        colors.append(cc)\n",
-    "        for c in cc:\n",
-    "            stack.append(cc)\n",
-    "        stack = stack[1:]"
-   ]
+    "[Grokking Algos](https://www.manning.com/books/grokking-algorithms) which I read ages ago has a nice chapter on recursion, and the most important thing is that you need a base case which returns something, else it calls a itself with a simpler version of the problem (hopefully everything is trending to the base case so stuff gets returned finally.)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['dark olive',\n",
-       " 'vibrant plum',\n",
-       " dict_keys(['faded blue', 'dotted black']),\n",
-       " dict_keys(['faded blue', 'dotted black'])]"
+       "True"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
-    "colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find=\"shiny gold\"\n",
-    "ans = list(rules[find].keys())\n",
-    "\n",
-    "def rr(col):\n",
-    "    ans = list(rules[find].keys())\n",
+    "def contains_bag(bag, target=\"shiny gold\", rules=rules):\n",
+    "    \"\"\"returns True if given bag can contain the given bag\"\"\"\n",
     "    \n",
-    "    "
+    "    # the base case - bag contains target directly so no need to investigate further\n",
+    "    if target in rules[bag]:\n",
+    "        return True\n",
+    "    \n",
+    "    # else see if the bags inside the given bag can contain the target\n",
+    "    return any([contains_bag(bag, target, rules) for bag in rules[bag] if bag != \"EMPTY\"])\n",
+    "    \n",
+    "\n",
+    "contains_bag(\"bright white\", \"shiny gold\", parse_7(test7))\n",
+    "contains_bag(\"dark orange\", \"shiny gold\", parse_7(test7))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'light red': {'bright white': 1, 'muted yellow': 2}, 'dark orange': {'bright white': 3, 'muted yellow': 4}, 'bright white': {'shiny gold': 1}, 'muted yellow': {'shiny gold': 2, 'faded blue': 9}, 'shiny gold': {'dark olive': 1, 'vibrant plum': 2}, 'dark olive': {'faded blue': 3, 'dotted black': 4}, 'vibrant plum': {'faded blue': 5, 'dotted black': 6}, 'faded blue': {'FULL': 0}, 'dotted black': {'FULL': 0}}\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "246"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "source": [
-    "def solve_7(find=\"shiny gold\", inp=test7):\n",
+    "def solve_7(inp=test7, target=\"shiny gold\"):\n",
     "    rules = parse_7(inp)\n",
-    "    \n",
-    "solve_7()"
+    "    return sum(contains_bag(bag, target, rules) for bag in rules)\n",
+    "\n",
+    "assert solve_7() == 4\n",
+    "solve_7(inp7)"
    ]
   },
   {
@@ -233,17 +192,70 @@
    "source": [
     "## Part 2\n",
     "\n",
-    "Now we need to validate data ranges. We already have a list of passports so I'll reuse that.\n",
-    "\n",
-    "First up writing some helper functions to validate specific passport fields:"
+    "Now we need to count the total number of bags inside a given bag as per the rules. This is a modification of the above to count bags contained instead of looking for a particular bag."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contains_num_bags(bag=\"shiny gold\", rules=rules):\n",
+    "    \"\"\"returns the number of bags a bag holds, calculated recursively\"\"\"\n",
+    "    \n",
+    "    # count the bags recursively, with empty bags excluded \n",
+    "    # n is the num of that bag it contains, added to n times the num of bags within that\n",
+    "    return sum([n + n*contains_num_bags(bag, rules) for bag, n in rules[bag].items() if bag != \"EMPTY\"])\n",
+    "    \n",
+    "\n",
+    "assert contains_num_bags(\"shiny gold\", rules=parse_7(test7)) == 32\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2976"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "def solve_7b(inp=test7, bag=\"shiny gold\"):\n",
+    "    rules = parse_7(inp)\n",
+    "    return contains_num_bags(bag, rules)\n",
+    "\n",
+    "solve_7b(inp7)"
+   ]
+  },
+  {
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "- Recursion always does my head in, do more of it.\n",
+    "- figure out how to write better text parsers"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
-   "language": "python",
-   "name": "conda-root-py"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "efcc86ea4a39a2642e38ee81392295025844417aa5c1c3d1f32da5a521641db4"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
