--- a/advent2021/day04.ipynb
+++ b/advent2021/day04.ipynb
@@ -57,62 +57,7 @@
     " 2  0 12  3  7\n",
     "\"\"\"\n",
     "\n",
-    "inp = utils.get_input(4, splitlines=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bingo nums: [7, 4, 9, 5, 11, 17, 23, 2, 0, 14, 21, 24, 10, 16, 13, 6, 15, 25, 12, 22, 18, 20, 8, 19, 3, 26, 1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[[22, 13, 17, 11, 0],\n",
-       "  [8, 2, 23, 4, 24],\n",
-       "  [21, 9, 14, 16, 7],\n",
-       "  [6, 10, 3, 18, 5],\n",
-       "  [1, 12, 20, 15, 19]],\n",
-       " [[3, 15, 0, 2, 22],\n",
-       "  [9, 18, 13, 17, 5],\n",
-       "  [19, 8, 7, 25, 23],\n",
-       "  [20, 11, 10, 24, 4],\n",
-       "  [14, 21, 16, 12, 6]],\n",
-       " [[14, 21, 17, 24, 4],\n",
-       "  [10, 16, 15, 9, 19],\n",
-       "  [18, 8, 23, 26, 20],\n",
-       "  [22, 11, 13, 6, 5],\n",
-       "  [2, 0, 12, 3, 7]]]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = test.splitlines()\n",
-    "draw = [int(n) for n in data[0].split(\",\")]\n",
-    "print(f\"bingo nums: {draw}\")\n",
-    "\n",
-    "boards = []\n",
-    "board = []\n",
-    "for i, row in enumerate(data[2:]):\n",
-    "    if len(row) > 2:\n",
-    "        board.append([int(i) for i in row.split(\" \") if i.isdigit()])\n",
-    "\n",
-    "    if len(board) == 5:\n",
-    "        boards.append(board.copy())\n",
-    "        board = []\n",
-    "\n",
-    "boards"
+    "inp = utils.get_input(4)"
    ]
   },
   {
@@ -258,7 +203,6 @@
     }
    ],
    "source": [
-    "\n",
     "def solve_2(inp=test, verbose: bool = False):\n",
     "    draw, boards = parse(inp)\n",
     "    bingo = np.zeros_like(boards, dtype=bool)\n",
@@ -292,41 +236,6 @@
     "assert solve_2(test) == 1924  # example answer\n",
     "solve_2(inp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_26258/1998782340.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0msolve_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "def solve_2(inp=test, verbose: bool = False):\n",
-    "    data = parse(inp)\n",
-    "\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "# assert solve_2(test) ==  # example answer\n",
-    "solve_2(inp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
