sync, completed day 6-7

--- a/advent2021/day00-blank.ipynb
+++ b/advent2021/day00-blank.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils\n",
     "from typing import NamedTuple\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import utils"
    ]
   },
   {
@@ -23,46 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "test: str = \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "inp = utils.get_input(X, splitlines=False)"
+    "raw_inp = utils.get_input(X, splitlines=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Pilot(direction='forward', move=5),\n",
-       " Pilot(direction='down', move=5),\n",
-       " Pilot(direction='forward', move=8),\n",
-       " Pilot(direction='up', move=3),\n",
-       " Pilot(direction='down', move=8),\n",
-       " Pilot(direction='forward', move=2)]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse(inp=test, verbose=False):\n",
-    "    steps = []\n",
-    "    for line in inp.splitlines():\n",
-    "        x, y = line.split(\" \")\n",
-    "        pilot = Pilot(x, int(y))\n",
-    "        steps.append(pilot)\n",
-    "        \n",
-    "    return steps\n",
+    "    return None\n",
     "\n",
     "data = parse()\n",
     "data"
@@ -70,39 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "forward=15 depth=10\n",
-      "forward=2105 depth=807\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1698735"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def solve(inp=test, verbose:bool=False):\n",
+    "def solve(inp=test, verbose: bool = False):\n",
     "    data = parse(inp)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    print(f\"{forward=} {depth=}\")\n",
+    "\n",
     "    return None\n",
-    "    \n",
-    "#assert solve(test) ==  # example answer\n",
-    "solve(inp)"
+    "\n",
+    "\n",
+    "# assert solve(test) ==  # example answer\n",
+    "solve(raw_inp)"
    ]
   },
   {
@@ -115,29 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_26258/1998782340.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0msolve_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def solve_2(inp=test, verbose:bool=False):\n",
+    "def solve_2(inp=test, verbose: bool = False):\n",
     "    data = parse(inp)\n",
-    "    \n",
+    "\n",
     "    return None\n",
-    "    \n",
-    "#assert solve_2(test) ==  # example answer\n",
-    "solve_2(inp)"
+    "\n",
+    "\n",
+    "# assert solve_2(test) ==  # example answer\n",
+    "solve_2(raw_inp)"
    ]
   },
   {
@@ -167,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
