Started on AOC 2024, day 1 solved here. Updated solve boilerplate function to return intermediate vars in a dict for plotting and debugging.

--- a/advent2023/day00.ipynb
+++ b/advent2023/day00.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import NamedTuple\n",
+    "import re\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import utils"
    ]
   },
@@ -18,29 +18,30 @@
    "source": [
     "## Day X:\n",
     "\n",
-    "[#](https://adventofcode.com/2023/day/4) "
+    "[#](https://adventofcode.com/2023/day/X) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "test: str = \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "raw_inp = utils.get_input(X, splitlines=False)"
+    "inp = utils.get_input(4, splitlines=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse(inp=test, verbose=False):\n",
     "    return None\n",
+    "\n",
     "\n",
     "data = parse()\n",
     "data"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
     "\n",
     "\n",
     "# assert solve(test) ==  # example answer\n",
-    "solve(raw_inp)"
+    "solve(inp)"
    ]
   },
   {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
     "\n",
     "\n",
     "# assert solve_2(test) ==  # example answer\n",
-    "solve_2(raw_inp)"
+    "solve_2(inp)"
    ]
   },
   {
@@ -96,7 +97,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('py311')",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -110,12 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "e02ad82cbb0c499a6a6b0623287fd448fc47250c30ba427c02d2932eb77e7b7d"
-   }
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
